--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "async": "^3.2.3",
     "autoprefixer": "10.4.5",
+    "await": "^0.2.6",
     "bootstrap": "^5.2.0-beta1",
     "mqtt": "^4.3.7",
     "react": "^18.1.0",
